--- a/equations.html
+++ b/equations.html
@@ -142,7 +142,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Equations</h1>
+        <h1 class="text-white title">Liquid First Degree Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <h4 class="text-white">X &#43; Y &#61; Z</h4>
@@ -210,7 +210,7 @@
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
-    <script src="js/equations.js"></script>
+    <script src="js/equations-first-deg.js"></script>
     <script>
         var myStorage = window.localStorage, equation;
         $(".equation").click(function (e) { 
