--- a/src/equations-second.html
+++ b/src/equations-second.html
@@ -245,9 +245,10 @@
         </div>
         </form>
         <br />
-        <div style="max-height: 1em;">
+        <div style="max-height: 1em;" id="thirdoutput">
             <p class="text-success" id="output3"></p>
         </div>
+        <br>
         <br>
         <div class="my-4">
             <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
