--- a/src/perimeter.html
+++ b/src/perimeter.html
@@ -182,7 +182,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="square" class="btn btn-success btn-lg equation" value="Solve for X">
+            <input type="submit" id="square" class="btn btn-success btn-lg equation" value="Calculate">
         </div>
         </form>
         <br />
@@ -205,7 +205,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="para" class="btn btn-success btn-lg equation" value="Solve for X">
+            <input type="submit" id="para" class="btn btn-success btn-lg equation" value="Calculate">
         </div>
         </form>
         <br />
@@ -232,7 +232,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="tri" class="btn btn-success btn-lg equation" value="Solve for X">
+            <input type="submit" id="tri" class="btn btn-success btn-lg equation" value="Calculate">
         </div>
         </form>
         <br />
@@ -251,7 +251,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="eqtri" class="btn btn-success btn-lg equation" value="Solve for X">
+            <input type="submit" id="eqtri" class="btn btn-success btn-lg equation" value="Calculate">
         </div>
         </form>
         <br />
@@ -270,7 +270,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="circle" class="btn btn-success btn-lg equation" value="Solve for X">
+            <input type="submit" id="circle" class="btn btn-success btn-lg equation" value="Calculate">
         </div>
         </form>
         <br />
@@ -281,6 +281,23 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Polygon</h4>
+        <h5>enter the sides with commas as shown in the example</h5>
+        <div class="center-form">
+            <textarea id="sides" placeholder="eg. 1,3,8,12.4,2" class="form-control message" required></textarea>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="polyg" class="btn btn-success btn-lg equation" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output6"></p>
+        </div>
+        <br>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
@@ -289,6 +306,7 @@
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/perimeter.js"></script>
+    <script src="js/perim-polyg.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
