--- a/inequalities.html
+++ b/inequalities.html
@@ -165,7 +165,7 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax+c>0 START -->
         <form autocomplete="off">
-        <h4 class="text-white">A &#215; X &#43; C &#62; 0</h4>
+        <h4 class="text-white">AX &#43; C &#62; 0</h4>
         <div class="center-form">
             <input type="number" id="a1" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -184,13 +184,13 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c>0 END -->
         <!-- ax+c>=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A &#215; X &#43; C &#8805; 0</h4>
+        <h4 class="text-white">AX &#43; C &#8805; 0</h4>
         <div class="center-form">
             <input type="number" id="a2" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -209,13 +209,13 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c>=0 END -->
         <!-- ax+c<0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A &#215; X &#43; C &#60; 0</h4>
+        <h4 class="text-white">AX &#43; C &#60; 0</h4>
         <div class="center-form">
             <input type="number" id="a3" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -234,13 +234,13 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c<0 END  -->
         <!-- ax+c<=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A &#215; X &#43; C &#8804; 0</h4>
+        <h4 class="text-white">AX &#43; C &#8804; 0</h4>
         <div class="center-form">
             <input type="number" id="a4" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -259,7 +259,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c<=0 END -->
     </div>
