--- a/tos.html
+++ b/tos.html
@@ -163,39 +163,15 @@
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 28 June 2021.</p>
+        <p>This policy is effective as of 20 April 2021 and was last updated on 6 July 2021.</p>
+        </section>
+        <section id="important-notice">
+        <h3>Important Notice</h3>
+        <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i> and <i>Sign In with Google</i> for monetization, analytics and functionality. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as well.</p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
-        <p>We do not collect any information from you</p>
-        <table class="table table-bordered text-white">
-            <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Locally Stored*</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Page Views</td>
-                    <td>Yes</td>
-                </tr>
-                <tr>
-                    <td>Usage statistics across the website</td>
-                    <td>Yes</td>
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td>No</td>
-                </tr>
-                <tr>
-                    <td>Time Spent across the website</td>
-                    <td>No</td>
-                </tr>
-            </tbody>
-        </table>
-        <p>*everything is stored in your browser in the form of cookies. We do not have access to this info.</p>
-        <p>If you no longer wish to have this information stored, you can delete them at anytime in the <a href="stats.html">stats page</a></p>
+        <p>We do not collect any information from you or your activity across our website.</p>
         </section>
         <section id="security-of-data">
         <h4>Security of Your Personal Information</h4>
@@ -212,7 +188,7 @@
         </section>
         <section id="cookies">
         <h3>Use of Cookies</h3>
-        <p>We use &ldquo;cookies&rdquo; to locally store information about you and your activity across our site inside your browser. A cookie is a small piece of data that our website stores on your computer, and accesses each time you visit, so we can understand how you use our site. This helps us serve you content based on preferences you have specified. </p>
+        <p>We use &ldquo;cookies&rdquo; to locally store information about your activity across our site inside your browser. A cookie is a small piece of data that our website stores on your computer, and accesses each time you visit.</p>
         <h3>Limits of Our Policy</h3>
         <p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and policies of those sites, and cannot accept responsibility or liability for their respective privacy practices. </p>
         </section>
