--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,6 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
-    <!-- GOOGLE ANALYTICS -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-7W2S8VV31F');
-    </script>
 </head>
 
 <body>
@@ -70,7 +62,7 @@
             <div class="form-check center-form d-inline-block">
                 <input class="form-check-input" type="checkbox" id="agree-to-tos" required>
                 <label class="form-check-label" for="agree-to-tos">
-                    I have read and agree on the <a href="tos.html">Terms of Service</a>
+                    I have read and agree on the <a href="tos.html">Terms of Service</a> (click this last)
                 </label>
             </div>
             <div class="button-group my-3">
@@ -116,7 +108,7 @@
                 document.querySelector('#send').disabled = true;
             }
         });
-        document.querySelector('.h-captcha').addEventListener('change', () => {
+        document.querySelector('.h-captcha').addEventListener('click', () => {
             if (document.querySelector('#agree-to-tos').checked && document.querySelector('.h-captcha').firstChild.getAttribute('data-hcaptcha-response')) {
                 document.querySelector('#send').disabled = false;
             } else {
