--- a/tos.html
+++ b/tos.html
@@ -36,14 +36,6 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
-    <!-- GOOGLE ANALYTICS -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-7W2S8VV31F');
-    </script>
 </head>
 
 <body>
@@ -58,14 +50,15 @@
                 with any applicable law and regulation regarding any personal information we may collect about you,
                 including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other
                 sites we own and operate. </p>
-            <p>This policy is effective as of 20 April 2021 and was last updated on 6 July 2021.</p>
+            <p>This policy is effective as of 20 April 2021 and was last updated on 20 July 2021.</p>
         </section>
         <section id="important-notice">
             <h3>Important Notice</h3>
-            <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i>,
-                <i>hCaptcha</i> and <i>Sign In with Google</i> for monetization, analytics, functionality and
+            <p>We rely on 3rd party software such as <i><a href="https://www.hcaptcha.com/terms">Human Captcha(hcaptcha)</a></i> and
+                <i>Postmail</i> for functionality and
                 protection. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as
-                well.</p>
+                well.
+            </p>
         </section>
         <section id="info-we-collect">
             <h3>Information We Collect</h3>
@@ -80,7 +73,7 @@
         <section id="childrens-privacy">
             <h3>Children’s Privacy</h3>
             <p>We do aim our product at children under the age of 13, and we do not knowingly collect personal
-                information about children under 13 or about anyone to be honest</p>
+                information about children under 13 or about anyone</p>
         </section>
         <section id="disclosure-of-personal-info-to-third-party">
             <h3>Disclosure of Personal Information to Third Parties</h3>
