--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -450,20 +450,36 @@
                             <td>a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup></td>
                         </tr>
                         <tr>
+                            <td>a<sup>2</sup> + b<sup>2</sup></td>
+                            <td>(a + b)<sup>2</sup> - 2ab</td>
+                        </tr>
+                        <tr>
                             <td>a<sup>2</sup> - b<sup>2</sup></td>
-                            <td>(a + b)(a - b)</td>
+                            <td>(a + b)(a - b) or (a - b)<sup>2</sup> + 2ab</td>
                         </tr>
                         <tr>
                             <td>a<sup>3</sup> + b<sup>3</sup></td>
-                            <td>(a + b)(a<sup>2</sup> - ab + b<sup>2</sup>)</td>
+                            <td>(a + b)(a<sup>2</sup> - ab + b<sup>2</sup>) or (a + b)<sup>3</sup> - 3ab(a + b)</td>
                         </tr>
                         <tr>
                             <td>a<sup>3</sup> - b<sup>3</sup></td>
-                            <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>)</td>
+                            <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>) or (a - b)<sup>3</sup> + 3ab(a - b)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>4</sup> - b<sup>4</sup></td>
+                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)</td>
+                        </tr>
+                        <tr>
+                            <td>(a + b + c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab + 2bc + 2ac </td>
                         </tr>
                         <tr>
                             <td>(a - b + c)<sup>2</sup></td>
                             <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab - 2bc + 2ac </td>
+                        </tr>
+                        <tr>
+                            <td>(a + b - c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab - 2bc - 2ac </td>
                         </tr>
                         <tr>
                             <td>(a - b - c)<sup>2</sup></td>
