--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -450,12 +450,20 @@
                             <td>a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup></td>
                         </tr>
                         <tr>
+                            <td>(a + b)<sup>4</sup></td>
+                            <td>a<sup>4</sup> + 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> + 4ab<sup>3</sup> + b<sup>4</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>4</sup></td>
+                            <td>a<sup>4</sup> - 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> - 4ab<sup>3</sup> + b<sup>4</sup></td>
+                        </tr>
+                        <tr>
                             <td>a<sup>2</sup> + b<sup>2</sup></td>
-                            <td>(a + b)<sup>2</sup> - 2ab</td>
+                            <td>(a + b)<sup>2</sup> - 2ab or (a - b)<sup>2</sup> + 2ab</td>
                         </tr>
                         <tr>
                             <td>a<sup>2</sup> - b<sup>2</sup></td>
-                            <td>(a + b)(a - b) or (a - b)<sup>2</sup> + 2ab</td>
+                            <td>(a + b)(a - b)</td>
                         </tr>
                         <tr>
                             <td>a<sup>3</sup> + b<sup>3</sup></td>
@@ -466,8 +474,16 @@
                             <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>) or (a - b)<sup>3</sup> + 3ab(a - b)</td>
                         </tr>
                         <tr>
+                            <td>a<sup>4</sup> + b<sup>4</sup></td>
+                            <td>(a + b)<sup>4</sup> - 2ab(2a<sup>2</sup> + 2b<sup>2</sup> + 3ab) or (a - b)<sup>4</sup> + 2ab(2a<sup>2</sup> - 2b<sup>2</sup> + 3ab)</tr>
+                        </tr>
+                        <tr>
                             <td>a<sup>4</sup> - b<sup>4</sup></td>
-                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)</td>
+                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)</tr>
+                        </tr>
+                        <tr>
+                            <td>a<sup>16</sup> - b<sup>16</sup></td>
+                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)(a<sup>4</sup> + b<sup>4</sup>)(a<sup>8</sup> + b<sup>8</sup>)</tr>
                         </tr>
                         <tr>
                             <td>(a + b + c)<sup>2</sup></td>
