--- a/likefractions.html
+++ b/likefractions.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Unlike Fractions to Like</title>
-    <meta name="title" content="MathFlare - Unlike Fractions to Like">
-    <meta name="og:title" content="MathFlare - Unlike Fractions to Like" />
-    <meta name="twitter:title" content="MathFlare - Unlike Fractions to Like" />
+    <title>MathFlare - Unlike to Like Fraction Converter</title>
+    <meta name="title" content="MathFlare - Unlike to Like Fraction Converter">
+    <meta name="og:title" content="MathFlare - Unlike to Like Fraction Converter" />
+    <meta name="twitter:title" content="MathFlare - Unlike to Like Fraction Converter" />
     <meta name="keywords"
-        content="unlike fractions to like, like fractions, fractions, algebra fraction, algebra, math, mathflare, math flare">
+        content="unlike fractions to like, like fractions, unlike to like, fractions, algebra fraction, algebra, math, mathflare, math flare">
     <meta name="description" content="Convert unlike Fractions to like" />
     <meta name="og:description" content="Convert unlike Fractions to like" />
     <meta name="twitter:description" content="Convert unlike Fractions to like" />
@@ -46,10 +46,11 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Unlike Fractions to Like</h1>
+        <h1 class="text-white">Unlike to Like Fraction Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white"><sup>x</sup><span class="text-warning">&frasl;</span><sub>y</sub>     <sup>a</sup><span class="text-warning">&frasl;</span><sub>b</sub></h4>
+            <h4 class="text-white"><sup>x</sup><span class="text-warning">&frasl;</span><sub>y</sub> <sup>a</sup><span
+                    class="text-warning">&frasl;</span><sub>b</sub></h4>
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">numerator</span>
