--- a/numberpairs.html
+++ b/numberpairs.html
@@ -13,10 +13,8 @@
     <meta name="keywords"
         content="number of pairs calculator, number of pairs, pairs, number, math problem, problem, math formula, mathflare, math flare">
     <meta name="description" content="Calculate the number of pairs of a set of numbers." />
-    <meta name="og:description"
-        content="Calculate the number of pairs of a set of numbers." />
-    <meta name="twitter:description"
-        content="Calculate the number of pairs of a set of numbers." />
+    <meta name="og:description" content="Calculate the number of pairs of a set of numbers." />
+    <meta name="twitter:description" content="Calculate the number of pairs of a set of numbers." />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/numberpairs" />
     <link rel="canonical" href="https://www.mathflare.xyz/numberpairs">
@@ -48,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Number of Pairs</h1>
+        <h1 class="text-white">Number of Pairs Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter how many numbers you have</h4>
@@ -57,26 +55,17 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="calc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="numpairscalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br />
         <div style="max-height: 1em;">
-            <p class="text-success" id="output"></p>
-        </div>
-        <br />
-        <br />
-        <div class="my-4">
-            <a href="https://duckduckgo.com/?q=number+of+pairs" target="_blank" rel="noopener"
-                class="btn btn-outline-light">Find information on the web</a>
+            <p class="text-success" id="numpairsout"></p>
         </div>
         <br />
     </div>
-    <!-- SCRIPTS START -->
-    
     <script src="dist/numberpairs.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
-    <!-- SCRIPT END -->
 </body>
 
 </html>
